--- a/dim_check.ipynb
+++ b/dim_check.ipynb
@@ -495,6 +495,25 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<_io.TextIOWrapper name='output_tensors/conv1_output.csv' mode='r' encoding='UTF-8'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open(\"output_tensors/lin2_output.csv\", \"r\") as rf:\n",
+    "    f_contents = rf.read(10)\n",
+    "    print(rf)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
